<resources>
    <string name="subject_prompt">Odaberite predmet</string>
    <string-array name="subjects">
        <item>Matematika</item>
        <item>Hrvatski jezik</item>
        <item>Fizika</item>
        <item>Kemija</item>
        <item>Biologija</item>
        <item>Tijelesna i zdravstvena kultura</item>
        <item>Zemljopis</item>
        <item>Povijest</item>
        <item>Informatika</item>
        <item>Glazbena kultura</item>
        <item>Likovna kultura</item>
        <item>Tehnička kultura</item>
        <item>Vjeronauk</item>
    </string-array>

    <string-array name="tip_ocjene">
        <item>Usmeni ispit</item>
        <item>Pismeni ispit</item>
        <item>Aktivnost</item>
        <item>Zadaća</item>
    </string-array>

    <string name="app_name">Ednevnik</string>
    <string name="Login">Prijava</string>
    <string name="registracija">Registracija</string>
    <string name="surname">Prezime</string>
    <string name="name">Ime</string>
    <string name="username">Korisničko ime</string>
    <string name="password">Lozinka</string>
    <string name="create_account">Registriraj se</string>
    <string name="message_info_noinput">Niste popunili sva polja</string>
    <string name="message_info_succregister">Uspiješno ste se registrirali</string>
    <string name="message_info_alreadyreg">Korisničko ime je već u upotrebi</string>
    <string name="message_info_incorrect_data">Netočni korisnički podaci!!</string>
    <string name="message_info_correct_data">Uspiješna prijava!!</string>
    <string name="message_infoprogress_wait">Molimo pričekajte...</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="color_choice">Odabrana boja: #</string>
    <string name="subjects_nochoice">Niste odabrali predmet ili boju</string>
    <string name="title_activity_student_nav_draw">StudentNavDraw</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


</resources>
